other/e-l/ensure-production-matches-staging/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: ensure-production-matches-staging
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../ensure-production-matches-staging.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: deployments.yaml
    finally:
    - sleep:
        duration: 5s
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deploy-bad-name.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deploy-bad-image.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deploy-bad-imversion.yaml
